fix trianglify wrapping on iOS, add awards to home, remove unneeded pages

--- a/app/css/trianglify.css
+++ b/app/css/trianglify.css
@@ -3,7 +3,7 @@
 }
 
 .trianglify .text-wrap {
-  vertical-align: -0.08em;
+  vertical-align: -0.1em;
 }
 
 .trianglify-text,
